--- a/assets/main.css
+++ b/assets/main.css
@@ -7,15 +7,27 @@ main-: style={'width': '90%', 'margin': '0 auto','border': 'thin solid black', '
 */
 
 body {
-    background-color: cadetblue;
+    background-color: rgb(197, 237, 238);
+    font-family:Arial, 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+div#container {
+    background-color: rgb(247, 246, 246)!important;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family:Arial, Helvetica, sans-serif
 }
 
 .main-container {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
     border: thin solid black;
     padding: 10px;
-    background-color: floralwhite;
+    background-color: rgb(244, 242, 239);
+}
+li {
+    margin-left: 1.5em;
 }
 
 .figure {
@@ -23,11 +35,10 @@ body {
     border: darkgray thin solid;
 }
 
-.pie {
-    /* width: 40%; */
-}
+/* .pie {
+} */
 
-.hr-separator {
+hr {
     margin: 20pt 0 40pt 0
 }
 
@@ -70,5 +81,28 @@ table.cell-table tr:nth-child(even){ background-color: #333; border:1px lightgre
     clear: both; 
 }
 
-.bar-chart { width: 69%; }
-.pie-chart { width: 30%; }
+.bar { width: 69%; }
+.pie { width: 30%; }
+
+.chart {
+    border: thin solid grey;
+    /* background-color: #ccc; */
+}
+
+/* .main-svg {
+    background: #ccc;
+} */
+/* .state-stat-p {
+    display: table;
+} */
+
+.state-stat-num, .nat-stat-num, .monospaced {
+    font-family: 'Courier New', Courier, monospace;
+    font-weight: 800;
+    /* display: table-cell; */
+}
+/* .state-stat-title {
+    display: table-column;
+    min-width: 500px;
+    max-width: 500px;
+} */
