Line charts, neighbors, and population density - oh my!
I added line charts that show neighboring states - both linear and logarithmic. This was a huge step for me to show how certain states compare to other regions and how the disease affects relative mortality numbers.

--- a/assets/main.css
+++ b/assets/main.css
@@ -52,6 +52,19 @@ div.header-links a {
     font-size: 1.2em;
 }
 
+*[data-dash-is-loading="true"]{
+    visibility: hidden;
+}
+*[data-dash-is-loading="true"]::before{
+    content: "Loading...";
+    font-size: 2.5em;
+    text-align: center;
+    display: block;
+    margin: 0 auto;
+    color: rgb(0, 0, 0);
+    visibility: visible;
+}
+
 
 
 #state-info-list {
